[gd_scene load_steps=10 format=3 uid="uid://b2skuaea7m0k"]

[ext_resource type="Texture2D" uid="uid://bnq8gwuev2x13" path="res://assets/Kirb_Minigame/sprites/background.png" id="1_fbrff"]
[ext_resource type="Script" path="res://scenes/kirb_minigame/samurai_minigame/kirb_minigame.gd" id="1_un5dr"]
[ext_resource type="PackedScene" uid="uid://dpud5lkvmotrr" path="res://scenes/kirb_minigame/kirby_player/kirby_player.tscn" id="2_gip8j"]
[ext_resource type="Texture2D" uid="uid://boc26sd71oewa" path="res://assets/Kirb_Minigame/sprites/Attention_Sprite.png" id="2_w4bqh"]
[ext_resource type="PackedScene" uid="uid://cwfq625ghp2d8" path="res://scenes/kirb_minigame/waddle_enemy/waddle_enemy.tscn" id="3_40jkk"]
[ext_resource type="Texture2D" uid="uid://c5j3hfg03rj3t" path="res://assets/Kirb_Minigame/sprites/X_Mark.png" id="6_jp2u1"]

[sub_resource type="Animation" id="Animation_vs6a6"]
resource_name = "attention"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttentionICon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.025, 0.225),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttentionICon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(102, -60), Vector2(106, -62), Vector2(102, -60), Vector2(97, -62), Vector2(102, -60), Vector2(106, -62), Vector2(102, -60)]
}

[sub_resource type="Animation" id="Animation_bdgf4"]
resource_name = "flash"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cph01"]
_data = {
"attention": SubResource("Animation_vs6a6"),
"flash": SubResource("Animation_bdgf4")
}

[node name="KirbMinigame" type="Node2D"]
script = ExtResource("1_un5dr")

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -222.0
offset_right = 256.0
grow_vertical = 0
texture = ExtResource("1_fbrff")

[node name="AttentionICon" type="TextureRect" parent="."]
visible = false
offset_left = 102.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -8.0
texture = ExtResource("2_w4bqh")

[node name="KirbyPlayer" parent="." instance=ExtResource("2_gip8j")]
position = Vector2(60, -78)

[node name="WaddleEnemy" parent="." instance=ExtResource("3_40jkk")]
position = Vector2(185, -77)

[node name="PenaltyMark" type="TextureRect" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = -107.0
offset_right = 111.0
offset_bottom = -67.0
grow_vertical = 0
scale = Vector2(-0.5, -0.5)
texture = ExtResource("6_jp2u1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -267.0
offset_right = 375.0
grow_vertical = 0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
limit_left = 0
limit_bottom = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cph01")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="WaitingTimer" type="Timer" parent="."]
one_shot = true

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="EndingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaitingTimer" to="." method="_on_waiting_timer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="timeout" from="EndingTimer" to="." method="_on_ending_timer_timeout"]
